# rust-template

./: .gitignore  Cargo.toml  package-lock.json  tailwind.config.js
